Signin 페이지 CSS 수정

--- a/signin/index.html
+++ b/signin/index.html
@@ -372,7 +372,8 @@
     <h1>로그인</h1>
     <div class="signin__card">
       <h2>
-        <strong>Welcome!</strong> 스타벅스에 오신 것을 환영합니다.
+        <strong>Welcome!</strong>
+        <p>스타벅스에 오신 것을 환영합니다.</p>
       </h2>
       <form>
         <input type="text" placeholder="아이디를 입력하세요." />
